changed explore button

--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -156,7 +156,7 @@
 	<div class="row"><!-- Themes -->
 		<div class="col-xs-12">
 			<h1 class="front-page-heading">Explore Whitechapel</h1>
-			<p class="lead">Not sure where to start? Click on a theme to start uncovering Whitechapel's past.</p>
+			<p class="lead">Not sure where to begin? Click on a theme to start uncovering Whitechapel's past.</p>
 			<br />
 		</div>
 	</div>
