--- a/templates/whitechapel_blog/blog_base.html
+++ b/templates/whitechapel_blog/blog_base.html
@@ -5,8 +5,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12">
-			{% block title_block %}
-			{% endblock %}
+			<h1>News and Events{% block title_block %}{% endblock %}</h1>
+			<hr />
 		</div>
 	</div>
 	<div class="row">
