--- a/templates/whitechapel_blog/index.html
+++ b/templates/whitechapel_blog/index.html
@@ -1,9 +1,6 @@
 {% extends 'whitechapel_blog/blog_base.html' %}
 
-{% block title_block %}
-			<h1>News and Events {% if subtitle %}| {{ subtitle }}{% endif %}</h1>
-			<hr />
-			{% endblock %}
+{% block title_block %}{% endblock %}
 
 
 
