--- a/templates/whitechapel_blog/single_post.html
+++ b/templates/whitechapel_blog/single_post.html
@@ -1,8 +1,6 @@
 {% extends 'whitechapel_blog/blog_base.html' %}
 
-{% block title_block %}
-			<h1>{{ post.title }}</h1>
-			<hr />
+{% block title_block %}| {{ post.title }}
 {% endblock %}
 
 {% block posts %}
