--- a/templates/whitechapel_blog/year_archive.html
+++ b/templates/whitechapel_blog/year_archive.html
@@ -1,8 +1,7 @@
 {% extends 'whitechapel_blog/blog_base.html' %}
 
 {% block title_block %}
-			<h1>News and Events {% if subtitle %}| {{ subtitle }}{% endif %}</h1>
-			<hr />
+			| All Posts From {{ year }}
 {% endblock %}
 
 {% block posts %}
