--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -507,7 +507,7 @@ p.results-preview {
 	background-image: url("/static/img/explore.jpg");
 	color: black;
 	font-size: 28px;
-	border: none;
+	border: 1px solid #c1c1c1;
 	background-position: center;
 }
 
