--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -43,18 +43,9 @@
 				{{ page.body|safe }}
 			</div>
 		</div>
-		
-		<!--{% if page.blog_post %}
-		<div class="col-xs-12 col-md-4 well"><!-- Featured blog post / next event--><!--
-			<h1 class="front-page-heading">Next Event</h1>
-			<h3><a href="{% url 'single_post' year=page.blog_post.date_published|date:'Y' post=page.blog_post.slug %}">{{ page.blog_post.title }}</a></h3>
-			<p class="results-preview">{{ page.blog_post.body|truncatewords_html:25|safe|striptags }}</p>
-		</div>
-		{% endif %}-->
-
 		<div class="col-xs-12 col-md-4"><!-- Latest contributions -->
 			<h1 class="front-page-heading">Latest Contributions</h1>
-			{% for item in latest|slice:":4" %}
+			{% for item in latest|slice:":3" %}
 			{% if item.created != None %}
 				{% if item.file %}
 				<div class="media">
@@ -81,9 +72,7 @@
 			{% endif %}
 
 			{% endfor %}
-		</div> <!-- / Latest contributions -->
-
-	</div>
+	</div></div>
 
 	
 	
@@ -102,7 +91,7 @@
 				{% endif %}
 				{% endfor %}
 			</div>
-		</div><!-- / Featured Contributions -->
+		</div><!-- / Featured Contribution -->
 		<div class="col-xs-12 col-md-8"><! Help Movie -->
 			<h1 class="front-page-heading">Browsing the Map</h1>
 			<div class="embed-responsive embed-responsive-16by9">
@@ -111,46 +100,7 @@
 			<p class="lead">If you're not sure about how to get started, we've made a short video to give you a quick overview.</p>
 		</div>
 
-	</div><!-- / Featured Content and Latest Images -->
-
-	<!--{% if page.media.all %}
-	<div class="row front-page-media"><!-- Featured Media --><!--
-		<div class="col-xs-12">
-			<h1 class="front-page-heading">Audio and Video</h1>
-		</div>
-		{% load embed_video_tags %}
-		<div class="row">
-			{% for embed in page.media.all %}
-			<div class="col-xs-12 col-md-6">
-				<div class="col-xs-12 col-md-4">
-					<h3>{{ embed.title }}</h3>
-					<div>{{ embed.description|safe }}</div>
-				</div>
-				<div class="col-xs-12 col-md-8">
-					<div class="embed-responsive embed-responsive-4by3">
-						{% video embed.url 'large' %}
-					</div>
-				</div>
-			</div>
-			{% endfor %}
-		</div>
-	</div>
-	{% endif %}-->
-
-	{% if page.images %}
-	<!--<div class="row"> <!-- Featured images --><!--
-		<div class="col-xs-12"><h1 class="front-page-heading">Images of Whitechapel</h1></div>
-	</div>
-	<div class="row">
-		{% for image in page.images.all %}
-		<div class="col-xs-12 col-md-4">
-		<a href="{% url 'detail' image.feature.id %}#images"><img src="{% thumbnail image.file 400x225 crop='0,0' %}" class="img-rounded" style="width: 100%;"></a>
-		<h3><span class="text-muted"><a href="{% url 'detail' image.feature.id %}#images">{{ image.title }}</a></span><br />
-		<span class="small"><a href="{% url 'all_content_by_author' image.author.id %}">{% if image.author.userprofile.display_name %}{{ image.author.userprofile.display_name }}{% else %}{{ image.author }}{% endif %}</a> | <a href="{% url 'detail' image.feature.id %}">{{ image.feature }}</a></h3>
-		</div>
- 		{% endfor %}
-	</div>	-->
-	{% endif %}
+	</div><!-- / Help Movie -->
 
 	{% if categories %}
 	<div class="row"><!-- Themes -->
@@ -161,7 +111,7 @@
 		</div>
 	</div>
 	
-	<div class="row themed-content"><!-- Themes -->
+	<div class="row themed-content">
 		{% for category in categories %}	
 		<div class="col-xs-12 col-md-3">
 			<div>
