--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -11,14 +11,13 @@
 	    	<div class="col-xs-12 col-md-6 col-md-offset-3 card login-dialogue">
 				<h1>{% trans "Sign Up" %}</h1>
 
-				<p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to log in to
-				{{site_name}}. As a final step, please check your email address and enter a user name below.{% endblocktrans %}</p>
+				<p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to log in to {{site_name}}. As a final step, please check your email address and enter a user name below. By default, your contributions will appear under your user name. If you'd rather use a different name, you can change this on the 'Edit Profile' page once you've signed up.{% endblocktrans %}</p>
 
 				<form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
 					{% csrf_token %}
 					{% load crispy_forms_tags %}
 					{{ form|crispy }}
-					<input type="hidden" name="{{ redirect_field_name }}" value="{% url 'user_profile' %}" />
+					<input type="hidden" name="{{ redirect_field_name }}" value="{% url 'map_home' %}" />
 					<button type="submit" class="btn btn-primary">{% trans "Sign Up" %}</button>
 				</form>
 			</div>
