--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -6,8 +6,10 @@
 		<title>Survey of London {{ subtitle }}</title>
 		<meta charset="UTF-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Stop search engines indexing the page for the timebeing. TURN OFF BEFORE LAUNCH! -->
+		{% if allow_indexing == False %}
+		<!-- Stop search engines indexing the staging site -->
 		<meta name="robots" content="noindex" />
+		{% endif %}
 		<!-- Bootstrap -->
 		{% load staticfiles %}
 		<link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.css' %}">
